# Bomberman

./: .cRun  .cRun.sh  .clean  .clean.sh  .compile.sh  .gitignore  .gitmodules  .install.sh  .reset.sh  .restartTerm.scpt  .run  .run.sh  Bomberman.cbp  Bomberman_Liam  Bomberman_Liam.cbp  CMakeCache.txt  CMakeLists.txt  Character.cpp  Character.hpp  Core.cpp  Core.hpp  Makefile  README.md  backup.cpp  bomberman  bomberman.config  cmake_install.cmake  game  install.scpt  old init.cpp  using.cpp
.irrKlang/: libirrklang.dylib
include/: Bomb.hpp  Bomberman.hpp  Box.hpp  BreakableBox.hpp  Camera.hpp  Character.hpp  Core.hpp  Drop.hpp  Drops.hpp  Enemy.hpp  EnemyDrop.hpp  Exceptions.hpp  ExtraBomb.hpp  Flame.hpp  Game.hpp  GameClass.hpp  GraphicsEngine.hpp  GraphicsHandler.hpp  GraphicsInterface.hpp  LevelHatch.hpp  Material.hpp  Menu.hpp  Model.hpp  ModelShader.hpp  Player.hpp  RangeExtender.hpp  RemoteDetonation.hpp  RemoteDetonator.hpp  SaveClass.hpp  Settings.hpp  Shader.hpp  Sound.hpp  UnbreakableBox.hpp  WAVFile.hpp  Window.hpp  animation.hpp  bgShader.h  camera.hpp  header.hpp  material.hpp  (+4 more)
opengl_dynamic_library/: libopengl.cpp  libopengl.hpp
opengl_dynamic_library/include/: Menu.hpp  Window.hpp  libopengl.hpp
opengl_dynamic_library/src/: Menu.cpp  Window.cpp  libopengl.cpp
resources/: bomberman.config
resources/models/: BMfloor.gltf  BMrun.gltf  BMrunnewBIGGERoptions.gltf  BMwalk.gltf  bomb.gltf  tester.gltf
resources/profiles/: 1fs.profile  2fs.profile  2w.profile  3fs.profile  3w.profile  Eme.profile  Liam.profile  Stuart.profile  character_name.profile  fs1080.profile  gladwin.profile  stuart.profile  van.player  van.profile
resources/saves/: character_name.save
src/: Animation.cpp  Bomb.cpp  Bomberman.cpp  Box.cpp  BreakableBox.cpp  Camera.cpp  Character.cpp  Core.cpp  Drop.cpp  Enemy.cpp  EnemyDrop.cpp  Exceptions.cpp  ExtraBomb.cpp  Flame.cpp  Game.cpp  GameClass.cpp  GraphicsEngine.cpp  GraphicsHandler.cpp  LevelHatch.cpp  Menu.cpp  Model.cpp  ModelShader.cpp  Player.cpp  RangeExtender.cpp  RemoteDetonation.cpp  RemoteDetonator.cpp  SaveClass.cpp  Settings.cpp  Sound.cpp  UnbreakableBox.cpp  Util.cpp  WAVFile.cpp  Window.cpp  background.cpp  camera.cpp  controls.cpp  main.cpp  material.cpp  objloader.cpp  quaternion_utils.cpp  (+7 more)
tutorial11_2d_fonts/: StandardShading.fragmentshader  StandardShading.vertexshader  TextVertexShader.fragmentshader  TextVertexShader.vertexshader  tutorial11.cpp
